tests/ui/const-generics/const-param-has-ty-goal-in-error-implies.stderr
error[E0277]: the trait bound `(): Foo` is not satisfied
  --> $DIR/const-param-has-ty-goal-in-error-implies.rs:37:19
   |
LL |     unsatisfied::<(), N>();
   |                   ^^ the trait `Foo` is not implemented for `()`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/const-param-has-ty-goal-in-error-implies.rs:19:1
   |
LL | trait Foo: Baz<()> {}
   | ^^^^^^^^^^^^^^^^^^
note: required by a bound in `unsatisfied`
  --> $DIR/const-param-has-ty-goal-in-error-implies.rs:31:8
   |
LL | fn unsatisfied<T, const N: usize>()
   |    ----------- required by a bound in this function
LL | where
LL |     T: Foo,
   |        ^^^ required by this bound in `unsatisfied`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
